welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: identifier expected but integer literal found.
while(estFaceMur():Boolean!=1){
                            ^Program:7: error: ')' expected but '}' found.
	}
        ^